# sinif-asistani1

./: .gitignore  CHANGELOG.md  README.md  baslat.command  index.html  ogrenci_yukleme_sablonu.xlsx  package-lock.json  package.json  paketle.command  version.json
.github/workflows/: build.yml
css/: games.css  notebooks.css  styles.css  tools.css  treasure.css
icon_build/: build_launcher_icons.py  make_icon.py
js/: app-lock.js  app.js  books.js  config.js  dashboard.js  exam-analysis.js  homework.js  license-config.js  notebooks.js  performance.js  plans.js  quick-caller.js  reports.js  state.js  tasks.js  tools.js  weekly.js  written-exam.js
lisans_ureticisi/: generator.html
src-tauri/: Cargo.toml  generate_icons.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
