[package]
name = "sinif-asistani"
version = "1.0.0"
description = "Sınıf Asistanı - Dijital Öğretmen Yardımcısı"
authors = ["Sınıf Asistanı"]
license = ""
repository = ""
default-run = "sinif-asistani"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "sinif_asistani_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sinif-asistani"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
